# qnx-time1

./: CMakeLists.txt  CMakePresets.json  README.md  another.c  protocol.h  time1.c
cmake/: toolchain-qnx-x86_64.cmake
